tests/NormalTests/paczka1/fuzzy1/98929296.err
Error in line 1: TPe2T3dJDAa S644 64,0
Error in line 6: vUp4n A275 63,6
Error in line 15: A784 A784 228,4
Error in line 20: A784 S483 35,0
Error in line 23: BdN3pEV A784 37,7
Error in line 29: TPe2T3dJDAa S483 32,2
